--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 @import "tailwindcss" ;
 *{
   box-sizing: border-box;
@@ -11,7 +13,7 @@ html{
 .Hero{
   position: relative;
   height: 100vh;
-  background: url('./src/images/Adam.jpeg') 80% center/cover no-repeat;
+  background: url('/images/Adam.jpeg') 80% center/cover no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
